<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

    <item android:title="@string/post">
        <menu>
            <item
                android:id="@+id/nav_job"
                android:icon="@drawable/job"
                android:title="Job Seeking" />
            <item
                android:id="@+id/nav_funding"
                android:icon="@drawable/fund"
                android:title="Funding issues"/>
            <item
                android:id="@+id/nav_peer"
                android:icon="@drawable/peer"
                android:title="Peer pressures"/>
            <item
                android:id="@+id/nav_Health"
                android:icon="@drawable/health"
                android:title="Health concerns"/>

        </menu>
    </item>

        <item android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/nav_Help"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_help" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/log_out" />
            </menu>
        </item>

    </group>
</menu>
